daemon: Also apply LC_PAPER

User-specified format should also apply to the paper format.

https://bugzilla.gnome.org/show_bug.cgi?id=690750